# romanian-folk-fight

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  index.html
.claude/: settings.json
.claude/skills/orchestrate/: SKILL.md
.claude/skills/report-issue/: SKILL.md
.claude/skills/rust-dev/: SKILL.md
.claude/skills/tdd-ship/: SKILL.md
.claude/skills/write-documentation/: SKILL.md
.github/workflows/: assets.yml  ci.yml  deploy.yml  web-smoke.yml
.superpowers/sdd/: doll-task-2-report.md  doll-task-3-report.md  final-fixes-report.md  issue-248-report.md  issue-249-report.md  issue-250-report.md  issue-258-report.md  issue-312-report.md  issue-316-report.md  task-2-report.md
assets/: CREDITS.md  manifest.toml
assets/audio/: manifest.toml
assets/backgrounds/: manifest.toml
assets/fighters/catalog/: human-foundation.json  manifest.toml
assets/fighters/gear/runtime/: manifest.toml
assets/fighters/gear/source/: README.md  manifest.toml
assets/fighters/human/runtime/: manifest.toml
assets/fighters/human/runtime/cioban/: manifest.toml
assets/fighters/human/runtime/haiduc/: manifest.toml
assets/fighters/human/runtime/shared/: manifest.toml
assets/fighters/human/runtime/ucenic_solomonar/: manifest.toml
assets/fighters/human/runtime/voinic/: manifest.toml
assets/fighters/human/source/: README.md  manifest.toml
assets/fighters/human/source/romanian-paper-doll-v1/: README.md  manifest.toml
assets/fighters/human/source/romanian-paper-doll-v2/: README.md  manifest.toml
assets/fighters/strigoi/runtime/: manifest.toml
assets/fighters/strigoi/source/: README.md  manifest.toml
assets/fighters/zmeu/runtime/: manifest.toml
assets/fighters/zmeu/source/: README.md  manifest.toml
assets/fonts/: manifest.toml
assets/gear/: manifest.toml
assets/shaders/: hybrid_character_2d.wgsl  manifest.toml
assets/sprites/: manifest.toml
assets/ui/: manifest.toml
assets/ui/pictograms/: manifest.toml
assets/ui/source/: README.md  manifest.toml
assets/web/: manifest.toml
deploy/: Caddyfile  deployment.yaml  service.yaml
docs/: art-direction.md  combat-redesign-proposal.md  feedback-budgets.md  navigation-proposal.md
docs/art-references/: known-good-human-material-reference.md
docs/superpowers/plans/: 2026-07-08-1554-next-pixel-art-asset-batch.md  2026-07-08-first-pixel-art-assets.md  2026-07-08-runtime-cutout-rig.md  2026-07-09-player-experience-rework.md  2026-07-18-hybrid-2-5d-character-material.md  2026-07-18-modular-character-foundation.md  2026-07-18-romanian-paper-doll-library.md  2026-07-20-save-reload-cdp-death.md
docs/superpowers/specs/: 2026-07-08-pixel-art-cutout-assets-design.md  2026-07-08-runtime-cutout-rig-design.md  2026-07-17-modular-2-5d-character-system-design.md
scripts/: bootstrap-worktree.sh  deploy-local-k8s.sh  extract-romanian-paper-doll-v1.py  generate-audio.py  generate-backgrounds.py  generate-fx-sprites.py  generate-gear-visuals.py  generate-hero-preset-parts.py  generate-human-material-channels.py  generate-pictograms.py  generate-placeholder-sprites.py  generate-shop-icons.py  generate-ui-panel.py  stylize-fighter-parts.py
src/: cutout.rs  lib.rs  main.rs
src/announcer/: lines.rs  mod.rs
src/arena/: animation.rs  fx.rs  mod.rs  staging.rs
src/audio/: mod.rs
src/character/: catalog.rs  definition.rs  generation.rs  material.rs  mod.rs  stats.rs
src/combat/: action_palette.rs  actions.rs  ai.rs  engine.rs  hud.rs  mod.rs  pause.rs  systems.rs
src/core/: mod.rs  projection.rs
src/creation/: draft.rs  mod.rs
src/flow/: mod.rs
src/items/: catalog.rs  mod.rs  visuals.rs
src/menu/: mod.rs
src/progression/: level.rs  mod.rs  result_ui.rs  victory_ui.rs
src/review/: mod.rs
src/roster/: mod.rs
src/save/: mod.rs  snapshot.rs  storage.rs
src/settings/: mod.rs
src/shop/: mod.rs
src/theme/: mod.rs  tokens.rs
src/town/: mod.rs
src/ui_widgets/: attribute_row.rs  focus.rs  mod.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs  process.rs
xtask/src/assets/: aggregate.rs  changed.rs  credits.rs  diagnostics.rs  discover.rs  mod.rs  schema.rs
xtask/src/assets/gallery/: layout.rs  mod.rs  model.rs  pages.rs  probe.rs
xtask/src/assets/validate/: bounds.rs  catalog.rs  image_checks.rs  mod.rs  refs.rs  rust_scan.rs
xtask/src/commands/: assets_cmd.rs  check_cmd.rs  mod.rs  pre_push.rs  test_cmd.rs  web_smoke_cmd.rs
xtask/src/web_smoke/: abandon_forfeit.rs  accessibility_settings_reload.rs  artifacts.rs  baseline.rs  browser.rs  cold_menu.rs  corrupt_save_recovery.rs  desktop_fight_freeze.rs  error.rs  fight_palette_accessible.rs  fight_palette_desktop.rs  fight_palette_phone.rs  gold_journey.rs  high_contrast.rs  hybrid_2_5d_character.rs  keyboard_accessibility.rs  mod.rs  reduced_motion_fight.rs  romanian_paper_doll_library.rs  save_reload.rs  server.rs  touch_targets.rs  zoom_200.rs
xtask/tests/: workspace_root.rs
