[package]
name = "romanian-folk-fight"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["dynamic_linking"] }

# Enable high optimizations for dependencies (including Bevy), but keep our code fast to build.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
