[package]
name = "romanian-folk-fight"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0" }
# default-features off: the engine only needs the `Rng`/`SeedableRng` traits,
# and the default `os_rng` backend does not build on wasm32-unknown-unknown.
rand = { version = "0.10", default-features = false }
rand_chacha = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native save backend: the save file lives under `dirs::data_dir()`.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6"

# Web save backend: the save lives in `window.localStorage`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[features]
# Fast incremental native builds; never enable for release or wasm builds.
dev = ["bevy/dynamic_linking"]

# Enable high optimizations for dependencies (including Bevy), but keep our code fast to build.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
